# CommandBridge

./: CMakeLists.txt  README.adoc
cmake/Modules/: FindCPPZMQ.cmake  FindZMQ.cmake
include/: common.h  issue.h
include/zlog/: config_compiler.h  config_platform.h  zlog.h
src/: client.cxx  common.cxx  server.cxx  zlog.cxx
